add pep 3119 not done finally

--- a/词汇对照表.md
+++ b/词汇对照表.md
@@ -17,4 +17,5 @@
 | Comment                      | 注释               |                                                              |
 | Function                     | 函数               |                                                              |
 | Method                       | 方法               | 特指类中定义的函数                                           |
+| Invariant                    | 不变性 或 恒等     | 表示一些总是会成立的规则，比如可哈希的对象必须保持哈希值在其生命周期内不变，且相等的可哈希对象其哈希值也必须相等。 |
 
