--- a/词汇对照表.md
+++ b/词汇对照表.md
@@ -20,4 +20,8 @@
 | Invariant                    | 不变性 或 恒等     | 表示一些总是会成立的规则，比如可哈希的对象必须保持哈希值在其生命周期内不变，且相等的可哈希对象其哈希值也必须相等。 |
 | bare types                   | 基础类型           | 指原生的基础类型，比如`list`等                               |
 | introspection                | 内省               | 通过内省机制可以在运行时探查变量的内部类型                   |
+| list comprehensions          | 列表推导式         |                                                              |
+| Assignment Expressions       | 赋值表达式         | 又称作海象操作符或者命名表达式                               |
+| f-string                     | 格式化字符串       | 比如f'{x:0.2f}'                                              |
+| augmented assignment         | 增强赋值           |                                                              |
 
